lesson-3/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-check-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-check
  template:
    metadata:
      labels:
        app: health-check
    spec:
      containers:
      - name: health-check
        image: confuciy/otus-lesson-3-health:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5  # Задержка перед первым запуском проверки
          periodSeconds: 10       # Как часто выполнять проверку
          timeoutSeconds: 5       # Максимальное время ожидания ответа на запрос
          failureThreshold: 3     # Количество неудачных попыток, прежде чем контейнер будет перезапущен
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5  # Задержка перед первым запуском проверки
          periodSeconds: 10       # Как часто выполнять проверку
          timeoutSeconds: 5       # Максимальное время ожидания ответа на запрос
          failureThreshold: 3     # Количество неудачных попыток, прежде чем контейнер будет исключен из списка доступных
