lesson-3/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-check-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Exact
        backend:
          service:
            name: health-check-service
            port:
              number: 80
      - path: /otusapp/(.*)/health
        pathType: ImplementationSpecific
        backend:
          service:
            name: health-check-service
            port:
              number: 80
